# vue-python-bundle

./: README.md  pyproject.toml
example/: main.py  vue_component_bundle.py
example/components/: mycomponent.vue  secondcomponent.vue
example/templates/: home.html  home2.html
