[tool.poetry]
name = "vue-python-bundle"
version = "0.1.0"
description = "An example repository for bundling a .vue component."
authors = ["FabianGoessling"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
vbuild = "^0.8.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
